traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:6: error: Boolean does not take parameters
  while (finalpos() == false){
                 ^TraversalZigZag:14: error: not found: value Direction
        if (getDirection()==Direction.EAST){
                            ^TraversalZigZag:17: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
          counter + = 1
                  ^TraversalZigZag:18: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
          x + = 1
            ^TraversalZigZag:23: error: ambiguous reference to overloaded definition,
both method - in class Int of type (x: Char)Int
and  method - in class Int of type (x: Byte)Int
match expected type ?
          x - = 1
            ^TraversalZigZag:24: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
          counter+ = 1
                 ^TraversalZigZag:27: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
      y + = 1
        ^TraversalZigZag:28: error: not found: value Direction
      if (getDirection()==Direction.EAST){
                          ^